--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+padding: 0%;
+margin: 0;
+}
+
 table{
     border: 1px dashed red;
     border-collapse: collapse;
@@ -11,4 +16,47 @@ tr{
 }
 td{
     border: 1px solid red;
+}
+a{
+    list-style: none;
+    text-decoration: none;
+}
+
+nav{
+    display: inline-block;
+    background-color: gray;
+    width: 100%;
+    height: 75px;
+    margin-bottom: 20px;
+}
+nav ul li{
+    display: inline-block;
+    
+    margin-left: 160px;
+    color: rgb(161, 161, 161);
+    padding-left: 20px;
+    padding-right: 20px;
+    padding: 15px 40px;
+}
+li:hover{
+    background-color: black;
+}
+#active:active{
+    color: black;
+}
+
+#div1{
+background-image: url('https://github.com/LTUC/amman-201d9/blob/master/class-08/lab-b/assets/family.jpg?raw=true');
+width: 940px;
+height: 450px;
+margin: auto;
+margin-bottom: 20px;
+
+}
+.class1{
+    position: relative;
+}
+#div2{
+    
+    
 }
