--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
 table{
     border: 1px dashed red;
     border-collapse: collapse;
-    width: 600px;
+    width: 80%;
     text-align: center;
     margin: auto;
     margin-top: 100px;
+    height: 50px;
 }
 tr{
-    border: 1px solid red;
+    border: 1px solid blanchedalmond;
 }
 td{
-    border: 1px solid red;
+    border: 1px solid white;
+    background-color: gray;
+    color: blanchedalmond;
+    text-transform: capitalize;
+}
+td:hover{
+    color: white;
+    background-color: black;
+    letter-spacing: 3px;
+}
+th:active{
+background-color: black;
+}
+a{
+    text-decoration: none;
+    color: 10px bold black;
 }
